--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/Chriss6202/APIPet/issues"
   },
-  "homepage": "https://github.com/Chriss6202/APIPet#readme"
+  "homepage": "https://github.com/Chriss6202/APIPet#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "debug": "^4.3.4",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.2",
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
+  }
 }
